Adicionado a funcao de restore ate 10 vezes